--- a/index.html
+++ b/index.html
@@ -205,5 +205,37 @@
         </a>
       </div>
     </nav>
+
+    <!-- Header -->
+    <header>
+      <!-- Background -->
+      <div class="background">
+        <img src="./assets/img/eye_magenta.svg" class="background_eye" />
+        <img
+          src="./assets/img/detail_magenta.svg"
+          class="background_detail_magenta"
+        />
+        <img
+          src="./assets/img/detail_amarelo.svg"
+          class="background_detail_amarelo"
+        />
+      </div>
+
+      <!-- Heading -->
+      <div class="header">
+        <h1 class="header_heading">
+          Transformamos Essência e Propósito em valor para marcas.
+        </h1>
+
+        <div class="header-chat">
+          <iframe
+            frameborder="0"
+            height="100%"
+            src="https://links.collect.chat/5be458bd692c6d16f43c698f"
+            width="100%"
+          ></iframe>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
