seo: add description and title

--- a/index.html
+++ b/index.html
@@ -8,12 +8,6 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <!-- Meta Description -->
-    <meta
-      name="description"
-      content="O Estúdio La.Bomba é um escritório de design focado em marcas, o estúdio busca trazer resultados para seus clientes através do design estratégico e branding, acrescentando o toque artístico que está presente em sua essência, colaborando para que as marcas atinjam seus objetivos."
-    />
-
     <link
       rel="apple-touch-icon"
       sizes="57x57"
@@ -106,7 +100,7 @@
     <!-- Facebook -->
     <meta property="og:url" content="https://blog.estudiolabomba.com/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blog - Estúdio La.Bomba" />
+    <meta property="og:title" content="Briefing - Estúdio La.Bomba" />
     <meta
       property="og:description"
       content="O Estúdio La.Bomba é um escritório de design focado em marcas, o estúdio busca trazer resultados para seus clientes através do design estratégico e branding, acrescentando o toque artístico que está presente em sua essência, colaborando para que as marcas atinjam seus objetivos."
@@ -117,6 +111,12 @@
     />
 
     <title>Briefing Interativo - Estúdio La.Bomba</title>
+
+    <!-- Meta Description -->
+    <meta
+      name="description"
+      content="O Estúdio La.Bomba é um escritório de design focado em marcas, o estúdio busca trazer resultados para seus clientes através do design estratégico e branding, acrescentando o toque artístico que está presente em sua essência, colaborando para que as marcas atinjam seus objetivos."
+    />
 
     <!-- Styles -->
     <link rel="stylesheet" href="./assets/css/briefing.min.css" />
